PA_Education/TestMenifest/force-app/main/default/objects/OpportunityMember__c/OpportunityMember__c.object-meta.xml
<CustomObject>
    <label>Oppty Member</label>
    <nameField>
        <displayFormat>OM-{000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>