PA_Education/TestMenifest/force-app/main/default/objects/OpportunityMember__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>영업기회</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>OpportunityMember</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>