PA_Education/TestMenifest/force-app/main/default/objects/OpportunityMember__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>역할</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Support</fullName>
                <default>true</default>
                <label>Sales Support</label>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Technical Adviser</fullName>
            </value>
            <value>
                <fullName>Solution Adviser</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Project Leader</fullName>
            </value>
            <value>
                <fullName>Account Executive</fullName>
            </value>
            <value>
                <fullName>Contact Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>