PA_Education/TestMenifest/force-app/main/default/objects/OpportunityMember__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>직원을 추가하면 영업기회의 읽기권한이 부여됩니다.</inlineHelpText>
    <label>이름</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User</relationshipName>
    <type>Lookup</type>
</CustomField>